# Softlock-task

./: AES.cpp  CMakeLists.txt  DButton.qml  InputItems.qml  README.md  filehandler.cpp  filehandler.h  main.cpp  main.qml  qml.qrc
